--- a/index.html
+++ b/index.html
@@ -1,1 +1,242 @@
-# spatial-language.github.io
+<!DOCTYPE html>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>SLU 2018 by SLU</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
+    <link
+    href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'
+rel='stylesheet' type='text/css'>
+<link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+    integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css"
+href="stylesheets/github-light.css" media="screen">
+
+<!-- Latest compiled and minified CSS -->
+ 
+
+  </head>
+  <body>
+<section class="page-header">
+
+      <h1 class="project-name">SLU 2018</h1>
+      <h2 class="project-tagline">First International Workshop on Spatial Language Understanding</h2>
+<h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="https://aaai.org/Conferences/AAAI/aaai18.php">(NAACL-HLT 2018)</a>, June 1–6, 2018, New Orleans, Louisiana, USA.</h2>
+<br>
+
+</section>
+<section>
+  <!-- Static navbar -->
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <butfton type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+           
+          </div>
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#topics">Topics</a></a></li>
+        <li><a href="#schedule">Schedule</a></li>
+              <li><a href="#invitedSpeakers">Invited Speakers</a></li>
+	      <li><a href="#submission-info">Submission</a></li>
+         <li><a href="#important-dates">Important Dates</a></li>
+	      <!--li><a href="#demos">Demos</a></li-->
+	      <!--li><a href="#panel">Panel</a></li-->
+	      <!--li><a href="#submission-info">Submission</a></li-->
+	      <li><a href="#organizers">Organizers</a></li>
+        <li><a href="http://delbp.github.io/pastWorkshops.html">Past Workshops</a>
+            </ul>
+            </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </nav>
+
+</section>
+
+
+<section class="main-content">
+
+<h2>Overview</h2>
+
+<h4>Spatial language Applications</h4>
+<p>An understanding of spatial language can benefit many areas of research endeavors relating to and/or making use of human language, including robotics, navigation, geographic information systems, traffic management, and query answering systems. 
+
+<h4>Spatial Language Understanding</h4> 
+Approaches to spatial language understanding have focused on developing formalisms to map natural language expressions to spatial
+representation appropriate for spatial reasoning [7, 4, 5], or studying spatial cognition in order to improve
+spatial language understanding by imitating use of such language by humans [8]. Despite all the research
+efforts toward standardizing the extraction of spatial information from natural language including designing
+annotation schema, creating linguistic corpora, etc, many research works in the related applications use their
+own invented datasets and a limited set of application-specific concepts when they need to extract the spa-
+tial information. </p>
+
+<h4>Recent Research Trend</h4>
+The recent research trend in combining vision and language also emphasizes the relevance of spatial semantics
+as it relates to the physical world and can be visualized. Applications of text to scene conversion or even
+generating textual description for images and videos are influenced by the ability of machines for spatial
+understanding and reasoning. Learning how to map this information onto a formal representation from text
+is one important research direction that can help the mentioned applications.</p>
+
+<h4>Standardizing Spatial Information Extraction</h4>
+<p>Compared to other linguistic tasks, standardizing a task for spatial information extraction
+seems to be challenging, particularly, an agreeable set of concepts and relationships and a formal spatial
+meaning representation that is domain independent is harder to obtain compared to other type of semantics
+such as temporal semantics. Attempts to arrive at a common set of basic concepts and relationships as well
+as making existing corpora inter-operable, however, can help avoid duplicated efforts within as well as across
+fields and instead focus on further developments in the respective fields for learning and reasoning.
+</p>
+
+<h4>Highlight</h4>
+The theme of this workshop remains generic, we aim to accommodate all the related research that deal with learning and reasoning about spatial information
+and have the natural language as a component in one way or another or in combination with other modalities.
+
+<a id="topics" class="anchor" href="#topics" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Topics Summary</h2>
+
+Our topics include but not limited to the following research aspects:
+
+<ul>
+<li>Spatial meaning representations, ontologies, annotation schemes, linguistic corpora.</li>
+<li>Spatial information extraction from natural language.</li>
+<li>Spatial information extraction in robotics, multimodal environments, navigational instructions.</li>
+<li>Text mining for spatial information in GIS systems.</li>
+<li>Spatial information in query answering systems, answering locative questions, such as where-questions.</li>
+<li>Spatial information for visual question answering</li>
+<li>Quantitative and qualitative reasoning with spatial information</li>
+<li>Spatial reasoning based on natural language</li>
+<li>Spatial reasoning based on multimodal information (vision and language)</li>
+<li>Extraction of spatial common sense knowledge</li>
+<li>Visualization of spatial language in 2-D and 3-D</li>
+<li>Spatial natural language generation</li>
+<li>Spatial language grounding</li>
+</ul>
+
+<a id="invitedSpeakers" class="anchor" href="#invitedSpeakers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Invited Speakers</h2>
+
+To be announced ...
+
+
+<a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+<h2>Submissions</h2>
+
+We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="http://naacl2018.org/call_for_paper.html">here</a>. Please make submissions via Softconf, <a href="https://www.softconf.com/naacl2018/papers/">here</a>.
+
+ <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
+ <ul>
+  <li>Submission Deadline: December 15, 2017</li>
+  <li>Notification: February 13-14, 2018 </li>
+  <li>Workshop Days: To be announced</li>
+ </ul>
+  
+<a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+
+<h2>Organizers Committee</h2>
+
+<table cellspacing="0" cellpadding="0" style="width:100%">
+<tr>
+<td width="32%">
+ <li><a href="http://www.cs.tulane.edu/%7Epkordjam/">Parisa Kordjamshidi</a></td>
+  <td>Tulane University, <a href="https://www.ihmc.us">IHMC</a></li></td>
+  <td> pkorjam@tulane.edu</td>
+</tr>
+<tr>
+<td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</li></td>
+<td>IHMC</td>
+<td>abhatia@ihmc.us</td>
+</tr>
+
+<tr> <td><li><a href="https://www.researchgate.net/profile/Umar_Manzoor">Umar Manzoor</a></li></td> 
+<td>Tulane University</td> 
+<td>umanzoor@tulane.edu</td>
+</tr>
+
+<tr>
+<td><li><a href="http://jamespusto.com/">James Pustejovsky</a></li></td> <td>Purdue University</td>
+ <td>jamesp@cs.brandeis.edu</td> 
+ </tr>
+ <tr>
+<td><li><a href="https://people.cs.kuleuven.be/~sien.moens/"> Maire-Francie Moens</a> </li></td> <td>Ismion Inc</td>
+ <td>sien.moens@cs.kuleuven.be</td> 
+ </tr>
+</table>
+
+<a id="program-commitee" class="anchor" href="#program-commitee" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+
+<h2>Program Committee</h2>
+<div>
+<table cellspacing="0" cellpadding="0" float="left">
+<tr>
+<td>
+<li>John A. Bateman</td> <td>Universitt Bremen, ateman@uni-bremen.de</td></li>
+  </tr>
+ <tr>
+<td><li>Anthony Cohn</td><td>Leeds, A.G.Cohn@leeds.ac.uk</li></td>
+</tr>
+  <tr>
+<td><li>Steven Bethard</td><td> University of Arizona, bethard@email.arizona.edu </td></li>
+</tr>
+<tr>
+<td>
+<li>Raffaella Bernardi</td><td>University of Trento, bernardi@disi.unitn.it</td></li>
+</tr>
+<tr>
+<td><li>Mehul Bhatt</td><td>Rebro University, Mehul.Bhatt@oru.se</li></td>
+</tr>
+<tr>
+<td>
+<li> Yonatan Bisk</td> <td>University of Washington, ybisk@yonatanbisk.com</li></td>
+</tr>
+<tr>
+<td><li>Joyce Chai</td><td>MSU, jchai@cse.msu.edu</li></td>
+</tr>
+<tr>
+<td><li>Angel Xuan Chang</td><td>Princeton, angelx@cs.stanford.edu</li></td>
+</tr>
+<tr>
+<td><li>Guillem Collell</td><td> KU Leuven, guillem.collelltalleda@kuleuven.be</li></td>
+</tr>
+<tr>
+<td><li>Zoe Falomir</td><td>Universitt Bremen, zfalomir@uni-bremen.de</li></td>
+</tr>
+<tr>
+<td><li>Julia Hockenmaier</td><td>UIUC, juliahmr@illinois.edu</li></td>
+</tr>
+<tr>
+<td><li>Inderjeet Mani</td><td>Yahoo Labs, inderjeet.mani@gmail.com</li></td>
+</tr>
+<tr>
+<td><li>Kirk Roberts</td><td>University of Texas at Dallas, kirk.roberts@uth.tmc.edu</li></td>
+</tr>
+<tr>
+<td><li>Manolis Savva</td><td>Princeton, msavva@princeton.edu</li></td>
+</tr>
+</table>
+
+</div>
+
+    </section>
+
+<!-- Start of StatCounter Code for Default Guide -->
+<script type="text/javascript">
+var sc_project=11083511; 
+var sc_invisible=1; 
+var sc_security="2f97c6cf"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="web analytics"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
+src="//c.statcounter.com/11083511/0/2f97c6cf/1/" alt="web
+analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+</body>
+</html>
