--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ href="stylesheets/github-light.css" media="screen">
   <body>
 <section class="page-header">
 
-      <h1 class="project-name">SLU 2018</h1>
+      <h1 class="project-name">SpLU 2018</h1>
       <h2 class="project-tagline">First International Workshop on Spatial Language Understanding</h2>
 <h2  class="project-tagline">In conjunction with The 16th Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="https://aaai.org/Conferences/AAAI/aaai18.php">(NAACL-HLT 2018)</a>, June 1–6, 2018, New Orleans, Louisiana, USA.</h2>
 <br>
@@ -142,7 +142,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <td width="32%">
  <li><a href="http://www.cs.tulane.edu/%7Epkordjam/">Parisa Kordjamshidi</a></td>
   <td>Tulane University, <a href="https://www.ihmc.us">IHMC</a></li></td>
-  <td> pkorjam@tulane.edu</td>
+  <td> pkordjam@tulane.edu</td>
 </tr>
 <tr>
 <td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</li></td>
@@ -190,6 +190,9 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <tr>
 <td>
 <li> Yonatan Bisk</td> <td>University of Washington, ybisk@yonatanbisk.com</li></td>
+</tr>
+<tr>
+<td><li>Johan Bos</td><td>University of Groningen, johan.bos@rug.nl</li></td>
 </tr>
 <tr>
 <td><li>Joyce Chai</td><td>MSU, jchai@cse.msu.edu</li></td>
