--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SLU 2018 by SLU</title>
+<title>SpLU 2018 by SpLU</title>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link
     href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'
