fixed Sien affiliation

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
  <td>jamesp@cs.brandeis.edu</td> 
  </tr>
  <tr>
-<td><li><a href="https://people.cs.kuleuven.be/~sien.moens/"> Maire-Francie Moens</a> </li></td> <td>Ismion Inc</td>
+<td><li><a href="https://people.cs.kuleuven.be/~sien.moens/"> Maire-Francie Moens</a> </li></td> <td>KULeuven</td>
  <td>sien.moens@cs.kuleuven.be</td> 
  </tr>
 </table>
