fixed James affiilation

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 </tr>
 
 <tr>
-<td><li><a href="http://jamespusto.com/">James Pustejovsky</a></li></td> <td>Purdue University</td>
+<td><li><a href="http://jamespusto.com/">James Pustejovsky</a></li></td> <td>Brandeis University</td>
  <td>jamesp@cs.brandeis.edu</td> 
  </tr>
  <tr>
