--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 
 <table cellspacing="0" cellpadding="0" style="width:100%">
 <tr>
-<td width="32%">
+<td>
  <li><a href="http://www.cs.tulane.edu/%7Epkordjam/">Parisa Kordjamshidi</a></td>
   <td>Tulane University, <a href="https://www.ihmc.us">IHMC</a></li></td>
   <td> pkordjam@tulane.edu</td>
@@ -171,20 +171,20 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <table cellspacing="0" cellpadding="0" float="left">
 <tr>
 <td>
-<li>John A. Bateman</td> <td>Universitt Bremen, ateman@uni-bremen.de</td></li>
+<li>John A. Bateman</td> <td>Universitat Bremen, ateman@uni-bremen.de</td></li>
   </tr>
  <tr>
-<td><li>Anthony Cohn</td><td>Leeds, A.G.Cohn@leeds.ac.uk</li></td>
+<td><li>Anthony Cohn</td><td>University of Leeds, A.G.Cohn@leeds.ac.uk</li></td>
 </tr>
   <tr>
-<td><li>Steven Bethard</td><td> University of Arizona, bethard@email.arizona.edu </td></li>
+<td><li>Steven Bethard</td><td> The University of Arizona, bethard@email.arizona.edu </td></li>
 </tr>
 <tr>
 <td>
 <li>Raffaella Bernardi</td><td>University of Trento, bernardi@disi.unitn.it</td></li>
 </tr>
 <tr>
-<td><li>Mehul Bhatt</td><td>Rebro University, Mehul.Bhatt@oru.se</li></td>
+<td><li>Mehul Bhatt</td><td>Örebro University, Mehul.Bhatt@oru.se</li></td>
 </tr>
 <tr>
 <td>
@@ -194,28 +194,28 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <td><li>Johan Bos</td><td>University of Groningen, johan.bos@rug.nl</li></td>
 </tr>
 <tr>
-<td><li>Joyce Chai</td><td>MSU, jchai@cse.msu.edu</li></td>
+<td><li>Joyce Chai</td><td>Michigan State University, jchai@cse.msu.edu</li></td>
 </tr>
 <tr>
-<td><li>Angel Xuan Chang</td><td>Princeton, angelx@cs.stanford.edu</li></td>
+<td><li>Angel Xuan Chang</td><td>Stanford University, angelx@cs.stanford.edu</li></td>
 </tr>
 <tr>
 <td><li>Guillem Collell</td><td> KU Leuven, guillem.collelltalleda@kuleuven.be</li></td>
 </tr>
 <tr>
-<td><li>Zoe Falomir</td><td>Universitt Bremen, zfalomir@uni-bremen.de</li></td>
+<td><li>Zoe Falomir</td><td>Universitat Bremen, zfalomir@uni-bremen.de</li></td>
 </tr>
 <tr>
-<td><li>Julia Hockenmaier</td><td>UIUC, juliahmr@illinois.edu</li></td>
+<td><li>Julia Hockenmaier</td><td>University of Illinois at Urbana-Champaign, juliahmr@illinois.edu</li></td>
 </tr>
 <tr>
 <td><li>Inderjeet Mani</td><td>Yahoo Labs, inderjeet.mani@gmail.com</li></td>
 </tr>
 <tr>
-<td><li>Kirk Roberts</td><td>University of Texas at Dallas, kirk.roberts@uth.tmc.edu</li></td>
+<td><li>Kirk Roberts</td><td>The University of Texas, kirk.roberts@uth.tmc.edu</li></td>
 </tr>
 <tr>
-<td><li>Manolis Savva</td><td>Princeton, msavva@princeton.edu</li></td>
+<td><li>Manolis Savva</td><td>Princeton University, msavva@princeton.edu</li></td>
 </tr>
 </table>
 
