Edited PC, Changed Dates to TBA

--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@ To be announced ...
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Submissions</h2>
 
-We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="http://naacl2018.org/call_for_paper.html">here</a>. Please make submissions via Softconf, <a href="https://www.softconf.com/naacl2018/papers/">here</a>.
+We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="http://naacl2018.org/call_for_paper.html">here</a>. Please make submissions via Softconf here</a>.
 
  <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
  <ul>
-  <li>Submission Deadline: December 15, 2017</li>
-  <li>Notification: February 13-14, 2018 </li>
-  <li>Workshop Days: To be announced</li>
+  <li>Submission Deadline: To be announced</li>
+  <li>Notification: To be announced </li>
+  <li>Workshop Days: To be announced </li>
  </ul>
   
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
@@ -217,6 +217,13 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <tr>
 <td><li>Manolis Savva</td><td>Princeton University, msavva@princeton.edu</li></td>
 </tr>
+<tr>
+<td><li>Martijn van Otterlo</td><td>Vrije Universiteit, mail@martijnvanotterlo.nl</li></td>
+</tr>
+<tr>
+<td><li>Bonnie Dorr</td><td>IHMC, bdorr@ihmc.us</li></td>
+</tr>
+
 </table>
 
 </div>
