--- a/index.html
+++ b/index.html
@@ -63,37 +63,36 @@ href="stylesheets/github-light.css" media="screen">
 
 <h2>Overview</h2>
 
-<h4>Spatial language Applications</h4>
-<p>An understanding of spatial language can benefit many areas of research endeavors relating to and/or making use of human language, including robotics, navigation, geographic information systems, traffic management, and query answering systems. 
+<p>
+One  of  the  essential  functions  of  natural  language  is  to  express  spatial  relationships  between  objects. Linguistic constructs can encode highly complex, relational structures of objects, spatial relations between them, and patterns of motion through space relative to some reference point.
+Spatial language understanding is useful in many areas of research endeavors relating to and/or making use of human language, including robotics, navigation, geographic information systems, traffic management, and query answering systems. 
+Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seems to be more challenging as it is harder to obtain an agreeable set of concepts and relationships and a formal spatial meaning representation that is domain independent. This has made the research on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable with each other.
 
-<h4>Spatial Language Understanding</h4> 
-Approaches to spatial language understanding have focused on developing formalisms to map natural language expressions to spatial
-representation appropriate for spatial reasoning [7, 4, 5], or studying spatial cognition in order to improve
-spatial language understanding by imitating use of such language by humans [8]. Despite all the research
-efforts toward standardizing the extraction of spatial information from natural language including designing
-annotation schema, creating linguistic corpora, etc, many research works in the related applications use their
-own invented datasets and a limited set of application-specific concepts when they need to extract the spa-
-tial information. </p>
+While formal meaning representation is a general issue for language understanding, formalizing spatial concepts and building formal reasoning models based on those is a well-established research area that can be exploited and linked to language understanding. The existing qualitative and quantitative representation and reasoning models can be leveraged for experimentation with interoprabiltiy of spatial semantics-based learning and reasoning models. 
 
-<h4>Recent Research Trend</h4>
-The recent research trend in combining vision and language also emphasizes the relevance of spatial semantics
-as it relates to the physical world and can be visualized. Applications of text to scene conversion or even
-generating textual description for images and videos are influenced by the ability of machines for spatial
-understanding and reasoning. Learning how to map this information onto a formal representation from text
-is one important research direction that can help the mentioned applications.</p>
+The research endeavors in this area could provide insights into many challenges of language understanding in general.
 
-<h4>Standardizing Spatial Information Extraction</h4>
-<p>Compared to other linguistic tasks, standardizing a task for spatial information extraction
-seems to be challenging, particularly, an agreeable set of concepts and relationships and a formal spatial
-meaning representation that is domain independent is harder to obtain compared to other type of semantics
-such as temporal semantics. Attempts to arrive at a common set of basic concepts and relationships as well
-as making existing corpora inter-operable, however, can help avoid duplicated efforts within as well as across
-fields and instead focus on further developments in the respective fields for learning and reasoning.
-</p>
 
-<h4>Highlight</h4>
-The theme of this workshop remains generic, we aim to accommodate all the related research that deal with learning and reasoning about spatial information
-and have the natural language as a component in one way or another or in combination with other modalities.
+The area of spatial semantics also is very well-connected and relevant to visualization of natural language since it deals with physical world's configurations. This provides a motivation for combining vision and language in a fruitful manner for spatial understanding. 
+
+Along these mentioned lines, in this workshop, we will highlight some key aspects of computational spatial language understanding including the following four areas:
+<ol>
+<li> Spatial Language Meaning Representation and Ontology</li>
+<li> Spatial Language Learning </li>
+<li>Spatial Language Reasoning </li>
+<li>Combining Vision and Language for Spatial Understanding</li>
+</ol>
+
+<p>Spatial Meaning Representation includes cognitive and linguistically motivated spatial ontologies, spatial knowledge representation, qualitative and quantitative representation models used for meaning representation of language, related annotation schemes and efforts for creating specialized corpora.
+
+Spatial language learning considers, symbolic and sub-symbolic techniques and computational models for spatial information extraction, semantic parsing, spatial co-references; using global context based on discourse and pragmatics relying on both data or formal models. 
+
+We are interested in investigation of the role of qualitative and quantitative formal representations in helping spatial reasoning based on natural language and the possibility of learning such representations from data and whether we need these formal representations to support reasoning.
+
+For the multimodality aspect, we seek an answer to questions like, which representations are appropriate for different modalities and which ones are modality independent? How can we exploit visual information for spatial language learning and reasoning? We welcome all related applications such as text to scene conversion, spatial and visual question answering, spatial understanding in multimodal setting for robotics and navigation tasks, etc. </p>
+
+The specific areas include but are not limited to: 
+
 
 <a id="topics" class="anchor" href="#topics" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Topics Summary</h2>
 
@@ -218,7 +217,7 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <td><li>Manolis Savva</td><td>Princeton University, msavva@princeton.edu</li></td>
 </tr>
 <tr>
-<td><li>Martijn van Otterlo</td><td>Vrije Universiteit, mail@martijnvanotterlo.nl</li></td>
+<td><li>Martijn van Otterlo</td><td>Vrije Universiteit Amsterdam, mail@martijnvanotterlo.nl</li></td>
 </tr>
 <tr>
 <td><li>Bonnie Dorr</td><td>IHMC, bdorr@ihmc.us</li></td>
