--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@ We are interested in investigation of the role of qualitative and quantitative f
 
 For the multimodality aspect, we seek an answer to questions like, which representations are appropriate for different modalities and which ones are modality independent? How can we exploit visual information for spatial language learning and reasoning? We welcome all related applications such as text to scene conversion, spatial and visual question answering, spatial understanding in multimodal setting for robotics and navigation tasks, etc. </p>
 
-Through this workshop, we aim to initiate discussions across fields dealing with spatial language along with other modalities. The desired outcome is identification of shared as well as unique challenges, problems and  future  directions  across  the  fields and various application domains related to spatial language understanding. The specific areas include but are not limited to:
+Through this workshop, we aim to initiate discussions across fields dealing with spatial language along with other modalities. The desired outcome is identification of shared as well as unique challenges, problems and  future  directions  across  the  fields and various application domains related to spatial language understanding. </p>
+The specific areas include but are not limited to:
+
 
 <ul>
 <li>Spatial meaning representations, ontologies, annotation schemes, linguistic corpora.</li>
