--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ The area of spatial semantics also is very well-connected and relevant to visual
 
 Along these mentioned lines, in this workshop, we will highlight some key aspects of computational spatial language understanding including the following four areas:
 <ol>
-<li> Spatial Language Meaning Representation and Ontology</li>
+<li> Spatial Language Meaning Representation and Ontologies</li>
 <li> Spatial Language Learning </li>
 <li>Spatial Language Reasoning </li>
 <li>Combining Vision and Language for Spatial Understanding</li>
