added William's info

--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@ One  of  the  essential  functions  of  natural  language  is  to  express  spat
 Spatial language understanding is useful in many areas of research endeavors relating to and/or making use of human language, including robotics, navigation, geographic information systems, traffic management, and query answering systems. 
 Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seems to be more challenging as it is harder to obtain an agreeable set of concepts and relationships and a formal spatial meaning representation that is domain independent. This has made the research on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable with each other.
 
-While formal meaning representation is a general issue for language understanding, formalizing spatial concepts and building formal reasoning models based on those is a well-established research area that can be exploited and linked to language understanding. The existing qualitative and quantitative representation and reasoning models can be leveraged for experimentation with interoprabiltiy of spatial semantics-based learning and reasoning models. 
-
-The research endeavors in this area could provide insights into many challenges of language understanding in general.
+While formal meaning representation is a general issue for language understanding, formalizing spatial concepts and building formal reasoning models based on those is a well-established research area that can be exploited and linked to language understanding. The existing qualitative and quantitative representation and reasoning models can be used for the investigation of interoprabiltiy of machine learning and reasoning over spatial semantics. The research endeavors in this area could provide insights into many challenges of language understanding in general.
 
 
 The area of spatial semantics also is very well-connected and relevant to visualization of natural language since it deals with physical world's configurations. This provides a motivation for combining vision and language in a fruitful manner for spatial understanding. 
