--- a/index.html
+++ b/index.html
@@ -64,33 +64,22 @@ href="stylesheets/github-light.css" media="screen">
 <h2>Overview</h2>
 
 <p>
-One  of  the  essential  functions  of  natural  language  is  to  express  spatial  relationships  between  objects. Linguistic constructs can encode highly complex, relational structures of objects, spatial relations between them, and patterns of motion through space relative to some reference point.
-Spatial language understanding is useful in many areas of research endeavors relating to and/or making use of human language, including robotics, navigation, geographic information systems, traffic management, and query answering systems. 
-Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seems to be more challenging as it is harder to obtain an agreeable set of concepts and relationships and a formal spatial meaning representation that is domain independent. This has made the research on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable with each other.
+One of the essential functions of natural language is to express spatial relationships between objects. Linguistic constructs can encode highly complex, relational structures of objects, spatial relations between them, and patterns of motion through space relative to some reference point. Spatial language understanding is useful in many areas of research endeavors relating to and/or making use of human language, including robotics, navigation, geographic information systems, traffic management, natural language understanding and translation, and query answering systems. Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seems to be more challenging as it is harder to obtain an agreeable set of concepts and relationships and a formal spatial meaning representation that is domain independent, as an example this could be compared to temporal relations. This has made research results on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable. While formal meaning representation is a general issue for language understanding, formalizing spatial concepts and building formal reasoning models based on those constitute challenging research problems with a wealth of prior foundational research that can be exploited and linked to language understanding. Existing qualitative and quantitative representation and reasoning models can be used for investigation of interoperabiltiy of machine learning and reasoning over spatial semantics. Research endeavors in this area could provide insights into many challenges of language understanding in general. Spatial semantics is also very well-connected and relevant to visualization of natural language, central to dealing with configurations in the physical world and motivating a combination of vision and language for richer spatial understanding. 
+This workshop highlights some of the above aspects of computational spatial language understanding including the following four areas: 
 
-While formal meaning representation is a general issue for language understanding, formalizing spatial concepts and building formal reasoning models based on those is a well-established research area that can be exploited and linked to language understanding. The existing qualitative and quantitative representation and reasoning models can be used for the investigation of interoprabiltiy of machine learning and reasoning over spatial semantics. The research endeavors in this area could provide insights into many challenges of language understanding in general.
-
-
-The area of spatial semantics also is very well-connected and relevant to visualization of natural language since it deals with physical world's configurations. This provides a motivation for combining vision and language in a fruitful manner for spatial understanding. 
-
-Along these mentioned lines, in this workshop, we will highlight some key aspects of computational spatial language understanding including the following four areas:
-<ol>
-<li> Spatial Language Meaning Representation and Ontologies</li>
+<li> Spatial Language Meaning Representation (Continuous, Symbolic, Ontologies)</li>
 <li> Spatial Language Learning </li>
-<li>Spatial Language Reasoning </li>
-<li>Combining Vision and Language for Spatial Understanding</li>
+<li> Spatial Language Reasoning </li>
+<li> Combining Vision and Language for Spatial Understanding</li>
 </ol>
 
-<p>Spatial Meaning Representation includes cognitive and linguistically motivated spatial ontologies, spatial knowledge representation, qualitative and quantitative representation models used for meaning representation of language, related annotation schemes and efforts for creating specialized corpora.
+<p>Spatial Language Meaning Representation and Ontologies includes cognitive and linguistically motivated spatial knowledge representation and ontologies, qualitative and quantitative representation models used for meaning representation of language, related annotation schemes and efforts for creating specialized corpora. Moreover, continuous meaning representations for spatial concepts is another aspect to be highlighted in the workshop. Spatial Language Learning considers symbolic and sub-symbolic techniques and computational models for spatial information extraction, semantic parsing, spatial co-reference within a global context that includes discourse and pragmatics from data or formal models.
 
-Spatial language learning considers, symbolic and sub-symbolic techniques and computational models for spatial information extraction, semantic parsing, spatial co-references; using global context based on discourse and pragmatics relying on both data or formal models. 
+Regarding the reasoning aspect, the workshop emphasizes the role of qualitative and quantitative formal representations in helping spatial reasoning based on natural language and the possibility of learning such representations from data; whether we need these formal representations to support reasoning or there are other alternative ideas.  
 
-We are interested in investigation of the role of qualitative and quantitative formal representations in helping spatial reasoning based on natural language and the possibility of learning such representations from data and whether we need these formal representations to support reasoning.
+For the multimodality aspect, answers to questions such as the following will be discussed: (1) Which representations are appropriate for different modalities and which ones are modality independent? (2) How can we exploit visual information for spatial language learning and reasoning? All related applications are welcome, including text to scene conversion, spatial and visual question answering, spatial understanding in multimodal setting for robotics and navigation tasks, etc. 
 
-For the multimodality aspect, we seek an answer to questions like, which representations are appropriate for different modalities and which ones are modality independent? How can we exploit visual information for spatial language learning and reasoning? We welcome all related applications such as text to scene conversion, spatial and visual question answering, spatial understanding in multimodal setting for robotics and navigation tasks, etc. </p>
-
-Through this workshop, we aim to initiate discussions across fields dealing with spatial language along with other modalities. The desired outcome is identification of shared as well as unique challenges, problems and  future  directions  across  the  fields and various application domains related to spatial language understanding. </p>
-The specific areas include but are not limited to:
+The workshop aims to initiate discussions across fields dealing with spatial language along with other modalities. The desired outcome is identification of shared as well as unique challenges, problems and future directions across the fields and various application domains related to spatial language understanding. The specific areas include but are not limited to: 
 
 
 <ul>
