--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ To be announced ...
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Submissions</h2>
 
-We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="http://naacl2018.org/call_for_paper.html">here</a>. Please make submissions via Softconf here</a>.
+We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="http://naacl2018.org/call_for_paper.html">here</a>. Please make submissions via Softconf <a href= "https://www.softconf.com/naacl2018/SpLU18/">here</a>.
 
  <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
  <ul>
