added a few more PC members info

--- a/index.html
+++ b/index.html
@@ -208,6 +208,15 @@ We encourage contributions with either a technical paper (NAACL style, 8 pages w
 <tr>
 <td><li>Bonnie Dorr</td><td>IHMC, bdorr@ihmc.us</li></td>
 </tr>
+<tr>
+<td><li>Bruno Martins</td><td>University of Lisbon, bruno.g.martins@tecnico.ulisboa.pt</li></td>
+</tr>
+<tr>
+<td><li>Mari Broman Olsen</td><td>Microsoft</li></td>
+</tr>
+<tr>
+<td><li>Clare Voss</td><td>ARL, clare.r.voss.civ@mail.mil</li></td>
+</tr>
 
 </table>
 
